tests/error/misc_errors/functional_continue.py
from guppylang.decorator import guppy


@compile_guppy
def foo(x: bool) -> int:
    _@functional
    while x:
        if x:
            continue
    return 0
